# voice-ledger

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  DESIGN_SPEC.md  PRD.md  README.md  TECH_STACK.md  UI_DESIGN.md
docs/superpowers/plans/: 2026-04-11-ux-result-view.md
docs/superpowers/specs/: 2026-04-11-ux-result-view-design.md
src/: main.py
src/engine/: __init__.py  cancellation.py  converter.py  exceptions.py  formatter.py  validator.py  whisper_runner.py  writer.py
src/resources/: styles.qss
src/ui/: drop_zone.py  main_window.py  styles.py
tests/: conftest.py
tests/fixtures/: generate_fixtures.sh
tests/integration/: test_converter_integration.py  test_transcription_pipeline.py
tests/unit/: test_cancellation.py  test_converter.py  test_engine_pipeline.py  test_exceptions.py  test_formatter.py  test_validator.py  test_whisper_runner.py  test_writer.py
