[project]
name = "voice-ledger"
version = "0.1.0"
description = "음성·영상 파일을 타임스탬프 포함 텍스트로 변환하는 macOS 데스크톱 앱"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
